--- a/client/index.html
+++ b/client/index.html
@@ -14,7 +14,7 @@
 <body>
     <nav class="white" role="navigation">
         <div class="nav-wrapper container">
-            <a id="logo-container" href="index.html" class="brand-logo">Logo</a>
+            <a id="logo-container" href="index.html" class="brand-logo">Noteload</a>
             <ul class="right hide-on-med-and-down">
                 <li><a href="connection.php">Se connecter</a></li>
                 <li><a href="inscription.php">S'inscrire</a></li>
