Suppression de l'extension .php et .html côté client

--- a/client/index.html
+++ b/client/index.html
@@ -9,6 +9,7 @@
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link href="css/materialize.css" type="text/css" rel="stylesheet" media="screen,projection" />
     <link href="css/style.css" type="text/css" rel="stylesheet" media="screen,projection" />
+    <link rel="manifest" href="manifest.json">
 </head>
 
 <body>
@@ -16,12 +17,12 @@
         <div class="nav-wrapper container">
             <a id="logo-container" href="index.html" class="brand-logo">Noteload</a>
             <ul class="right hide-on-med-and-down">
-                <li><a href="connection.php">Se connecter</a></li>
-                <li><a href="inscription.php">S'inscrire</a></li>
+                <li><a href="/connection">Se connecter</a></li>
+                <li><a href="/inscription">S'inscrire</a></li>
             </ul>
             <ul id="nav-mobile" class="sidenav">
-                <li><a href="connection.php">Se connecter</a></li>
-                <li><a href="inscription.php">S'inscrire</a></li>
+                <li><a href="/connection">Se connecter</a></li>
+                <li><a href="/inscription">S'inscrire</a></li>
             </ul>
             <a href="#" data-target="nav-mobile" class="sidenav-trigger"><i class="material-icons">menu</i></a>
         </div>
@@ -35,7 +36,7 @@
                     <h5 class="header col s12 light">Une application de consultation des notes présentes sur l'environnement numérique de travail de l'Université de Rennes 1</h5>
                 </div>
                 <div class="row center">
-                    <a href="inscription.php" id="download-button" class="btn-large waves-effect waves-light teal lighten-1">Commencer</a>
+                    <a href="/inscription" id="download-button" class="btn-large waves-effect waves-light teal lighten-1">Commencer</a>
                 </div>
                 <br><br>
             </div>
@@ -80,8 +81,8 @@
                 <div class="col l3 offset-l3 s12">
                     <h5 class="white-text">Navigation</h5>
                     <ul>
-                        <li><a class="white-text" href="connection.php">Se connecter</a></li>
-                        <li><a class="white-text" href="inscription.php">S'inscrire</a></li>
+                        <li><a class="white-text" href="/connection">Se connecter</a></li>
+                        <li><a class="white-text" href="/inscription">S'inscrire</a></li>
                     </ul>
                 </div>
             </div>
