Mise à jour du design

--- a/client/dashboard.html
+++ b/client/dashboard.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 
-<body class="dark">
+<body>
     <main>
         <header>
             <img src="img/profile_picture.jpg" alt="Mathis Boultoureau" />
