--- a/client/index.html
+++ b/client/index.html
@@ -1,102 +1,60 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fr">
 
 <head>
-    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Noteload</title>
-    <!-- CSS  -->
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-    <link href="css/materialize.css" type="text/css" rel="stylesheet" media="screen,projection" />
-    <link href="css/style.css" type="text/css" rel="stylesheet" media="screen,projection" />
-    <link rel="manifest" href="manifest.json">
+    <link rel="stylesheet" href="css/style.css">
+    <meta name="description" content="Noteload est un service non-officiel pour consultez vos notes de l'Université de Rennes 1." />
 </head>
 
 <body>
-    <nav class="white" role="navigation">
-        <div class="nav-wrapper container">
-            <a id="logo-container" href="index.html" class="brand-logo">Noteload</a>
-            <ul class="right hide-on-med-and-down">
-                <li><a href="/connection">Se connecter</a></li>
-                <li><a href="/inscription">S'inscrire</a></li>
-            </ul>
-            <ul id="nav-mobile" class="sidenav">
-                <li><a href="/connection">Se connecter</a></li>
-                <li><a href="/inscription">S'inscrire</a></li>
-            </ul>
-            <a href="#" data-target="nav-mobile" class="sidenav-trigger"><i class="material-icons">menu</i></a>
-        </div>
+    <main>
+        <header>
+            <p>
+                Bienvenue sur <br />
+                <strong>Noteload</strong>
+            </p>
+        </header>
+
+        <section>
+            <p>Découvrez vite Noteload !</p>
+            <p>Noteload est un service pour consultez vos notes instantanément.</p>
+            <div class="button">
+                <a href="/connexion">Connexion</a>
+            </div>
+            <div class="button">
+                <a href="/inscription">Inscription</a>
+            </div>
+        </section>
+
+    </main>
+
+    <nav>
+        <ul>
+            <li class="selected">
+                <a href="/">
+                    <i class="material-icons">home</i>
+                    <p>Accueil</p>
+                </a>
+            </li>
+            <li>
+                <a href="/connexion">
+                    <i class="material-icons">person</i>
+                    <p>Connexion</p>
+                </a>
+            </li>
+            <li>
+                <a href="/inscription">
+                    <i class="material-icons">person_add</i>
+                    <p>Inscription</p>
+                </a>
+            </li>
+        </ul>
     </nav>
-    <div id="index-banner" class="parallax-container">
-        <div class="section no-pad-bot">
-            <div class="container">
-                <br><br>
-                <h1 class="header center teal-text text-lighten-2">Noteload</h1>
-                <div class="row center">
-                    <h5 class="header col s12 light">Une application de consultation des notes présentes sur l'environnement numérique de travail de l'Université de Rennes 1</h5>
-                </div>
-                <div class="row center">
-                    <a href="/inscription" id="download-button" class="btn-large waves-effect waves-light teal lighten-1">Commencer</a>
-                </div>
-                <br><br>
-            </div>
-        </div>
-        <div class="parallax"><img src="https://cdn.pixabay.com/photo/2019/12/17/14/08/landscape-4701725_960_720.jpg" alt="image"></div>
-    </div>
-    <div class="container">
-        <div class="section">
-            <!--   Icon Section   -->
-            <div class="row">
-                <div class="col s12 m4">
-                    <div class="icon-block">
-                        <h2 class="center brown-text"><i class="material-icons">flash_on</i></h2>
-                        <h5 class="center">Service rapide et gratuit</h5>
-                        <p class="light center">Nous avons fait le gros du travail pour vous afin de vous fournir un service efficace et rapide fonctionnel sur nos serveurs.</p>
-                    </div>
-                </div>
-                <div class="col s12 m4">
-                    <div class="icon-block">
-                        <h2 class="center brown-text"><i class="material-icons">group</i></h2>
-                        <h5 class="center">L'expérience utilisateur</h5>
-                        <p class="light center">nous avons pu créer une bonne expérience utilisateur qui intègre des composants et des animations qui fournissent davantage de facilité aux utilisateurs.</p>
-                    </div>
-                </div>
-                <div class="col s12 m4">
-                    <div class="icon-block">
-                        <h2 class="center brown-text"><i class="material-icons">settings</i></h2>
-                        <h5 class="center center">Des améliorations</h5>
-                        <p class="light">Nous fournissons un service toujours en progression avec des améliorations pour satisfaire nos consultations de nos notes.</p>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-    <footer class="page-footer teal">
-        <div class="container">
-            <div class="row">
-                <div class="col l6 s12">
-                    <h5 class="white-text">Noteload</h5>
-                    <p class="grey-text text-lighten-4">Nous sommes une équipe d'étudiants universitaires qui travaillent sur ce projet.</p>
-                </div>
-                <div class="col l3 offset-l3 s12">
-                    <h5 class="white-text">Navigation</h5>
-                    <ul>
-                        <li><a class="white-text" href="/connection">Se connecter</a></li>
-                        <li><a class="white-text" href="/inscription">S'inscrire</a></li>
-                    </ul>
-                </div>
-            </div>
-        </div>
-        <div class="footer-copyright">
-            <div class="container">
-                Made by <a class="brown-text text-lighten-3" href="http://materializecss.com">Materialize</a>
-            </div>
-        </div>
-    </footer>
-    <!--  Scripts-->
-    <script src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
-    <script src="js/materialize.js"></script>
-    <script src="js/init.js"></script>
 </body>
 
 </html>
